--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
       ym(55454581, "init", {
         clickmap: true,
         trackLinks: true,
-        accurateTrackBounce: true
+        accurateTrackBounce: true,
+        webvisor: true
       });
     </script>
     <noscript
